width gap phototextbutton fix

--- a/src/components/sections/PhotoTextButton/PhotoTextButton.module.scss
+++ b/src/components/sections/PhotoTextButton/PhotoTextButton.module.scss
@@ -1,27 +1,26 @@
 @import "../../../styles/mixins";
 
-@include laptop {
-  .grid {
+.container {
+  @include laptop {
+    display: flex;
     align-items: center;
-    display: grid;
-    grid-template-columns: var(--grid-template-columns);
-    grid-template-areas:
-      "photoWrapper icon"
-      "photoWrapper subTitle"
-      "photoWrapper title"
-      "photoWrapper description"
-      "photoWrapper buttonWrapper";
-    column-gap: 73px;
+    gap: var(--gap);
 
     &[data-is-reverse="true"] {
-      column-gap: 125px;
-      grid-template-areas:
-        "icon photoWrapper"
-        "subTitle photoWrapper"
-        "title photoWrapper"
-        "description photoWrapper"
-        "buttonWrapper photoWrapper";
+      flex-direction: row-reverse;
     }
+  }
+}
+
+.left {
+  @include laptop {
+    width: var(--left-width);
+  }
+}
+
+.right {
+  @include laptop {
+    width: var(--right-width);
   }
 }
 
@@ -49,8 +48,11 @@
   height: 1px;
 }
 
+.top {
+  grid-area: top;
+}
+
 .subTitle {
-  grid-area: subTitle;
   margin-bottom: 15px;
 
   @include laptop {
@@ -59,25 +61,25 @@
 }
 
 .title {
-  grid-area: title;
   margin-bottom: 30px;
 }
 
 .photoWrapper {
-  grid-area: photoWrapper;
   margin-bottom: 30px;
   @include laptop {
     margin-bottom: 0;
   }
+
+  img {
+    width: 100%;
+  }
 }
 
 .description {
-  grid-area: description;
   margin-bottom: 30px;
 }
 
 .buttonWrapper {
-  grid-area: buttonWrapper;
   @include laptop {
     display: flex;
     margin-bottom: 37.5px;
